--- a/app/src/main/res/layout/sceyt_ui_item_inc_files_message.xml
+++ b/app/src/main/res/layout/sceyt_ui_item_inc_files_message.xml
@@ -40,6 +40,7 @@
             android:layout_below="@+id/messageDay"
             android:layout_marginEnd="8dp"
             android:visibility="gone"
+            app:isGroup="false"
             app:layout_constraintEnd_toStartOf="@+id/layoutDetails"
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintHorizontal_chainStyle="packed"
@@ -62,30 +63,46 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/messageDay"
             android:layout_toEndOf="@+id/avatar"
-            android:background="@drawable/bg_inc_message">
+            android:background="@drawable/bg_inc_message"
+            android:maxWidth="@dimen/bodyMaxWidth"
+            android:minWidth="@dimen/bodyMaxWidth">
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/messageBody"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="8dp"
-                android:layout_marginStart="12dp"
-                android:layout_marginEnd="8dp"
+                android:paddingHorizontal="12dp"
+                android:text="@{message.body}"
                 android:textColor="@color/colorFontDark"
                 android:textSize="@dimen/mediumTextSize"
-                app:layout_constraintBottom_toBottomOf="@+id/layoutDetails"
+                android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="@+id/layoutDetails"
                 app:layout_constraintStart_toStartOf="@+id/layoutDetails"
                 app:layout_constraintTop_toTopOf="@+id/layoutDetails"
-                app:layout_constraintWidth_max="@dimen/bodyMaxWidth"
+                bind:visibleIf="@{!message.body.empty}"
                 tools:text="Lore ipsum  is the correct text which" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvFiles"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/messageBody"
+                tools:itemCount="3"
+                tools:listitem="@layout/sceyt_ui_file_item" />
 
             <com.sceyt.chat.ui.presentation.customviews.DateStatusView
                 android:id="@+id/messageDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="15dp"
+                android:layout_marginEnd="8dp"
                 android:layout_marginBottom="6dp"
+                android:paddingHorizontal="8dp"
                 app:dateTextColor="#7C7E8E"
                 app:dateTextSize="@dimen/tinyTextSize"
                 app:firstStatus="false"
