--- a/app/src/main/res/layout/sceyt_ui_item_out_files_message.xml
+++ b/app/src/main/res/layout/sceyt_ui_item_out_files_message.xml
@@ -30,96 +30,110 @@
             android:textColor="@color/colorFontGray"
             android:textSize="@dimen/extraSmallTextSize"
             android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_chainStyle="packed"
             bind:visibleIf="@{message.showDate}"
             tools:text="Feb 24" />
-
-        <com.sceyt.chat.ui.presentation.customviews.Avatar
-            android:id="@+id/avatar"
-            android:layout_width="@dimen/_27sdp"
-            android:layout_height="@dimen/_27sdp"
-            android:layout_below="@+id/messageDay"
-            android:layout_marginEnd="8dp"
-            android:visibility="gone"
-            app:layout_constraintEnd_toStartOf="@+id/layoutDetails"
-            app:layout_constraintHorizontal_bias="0"
-            app:layout_constraintHorizontal_chainStyle="packed"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/layoutDetails"
-            tools:visibility="visible" />
 
         <com.sceyt.chat.ui.presentation.customviews.ToReplayLineView
             android:id="@+id/toReplayLine"
             android:layout_width="10dp"
             android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/layoutDetails"
             android:layout_alignTop="@+id/layoutDetails"
             android:layout_alignBottom="@+id/tvReplayCount"
-            android:visibility="gone" />
+            android:layout_alignParentEnd="true"
+            android:visibility="gone"
+            app:toLeft="true" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/layoutDetails"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/messageDay"
-            android:layout_toEndOf="@+id/avatar"
-            android:background="@drawable/bg_inc_message">
+            android:layout_alignParentEnd="true"
+            android:background="@drawable/bg_out_message"
+            android:maxWidth="@dimen/bodyMaxWidth"
+            android:minWidth="@dimen/bodyMaxWidth">
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/messageBody"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="8dp"
-                android:layout_marginStart="12dp"
-                android:layout_marginEnd="8dp"
+                android:paddingHorizontal="12dp"
+                android:text="@{message.body}"
                 android:textColor="@color/colorFontDark"
                 android:textSize="@dimen/mediumTextSize"
-                app:layout_constraintBottom_toBottomOf="@+id/layoutDetails"
+                android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="@+id/layoutDetails"
                 app:layout_constraintStart_toStartOf="@+id/layoutDetails"
                 app:layout_constraintTop_toTopOf="@+id/layoutDetails"
-                app:layout_constraintWidth_max="@dimen/bodyMaxWidth"
+                bind:visibleIf="@{!message.body.empty}"
                 tools:text="Lore ipsum  is the correct text which" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvFiles"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/messageBody"
+                tools:itemCount="3"
+                tools:listitem="@layout/sceyt_ui_file_item" />
 
             <com.sceyt.chat.ui.presentation.customviews.DateStatusView
                 android:id="@+id/messageDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="15dp"
+                android:layout_marginEnd="8dp"
                 android:layout_marginBottom="6dp"
+                android:paddingHorizontal="8dp"
+                android:includeFontPadding="false"
                 app:dateTextColor="#7C7E8E"
                 app:dateTextSize="@dimen/tinyTextSize"
                 app:firstStatus="false"
                 app:layout_constraintBottom_toBottomOf="@id/layoutDetails"
                 app:layout_constraintEnd_toEndOf="@id/layoutDetails"
-                tools:dateText="00:37" />
+                app:statusIconMargin="5dp"
+                app:statusIconSize="16dp"
+                bind:incoming="@{message.incoming}"
+                bind:status="@{message.deliveryStatus}"
+                tools:dateText="00:37"
+                tools:statusIcon="@drawable/ic_status_read" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tvReplayCount"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/rvReactions"
-            android:layout_marginStart="2dp"
-            android:layout_toEndOf="@+id/toReplayLine"
-            android:paddingTop="3dp"
-            android:textColor="@color/colorAccent"
-            android:textSize="@dimen/tinyTextSize"
-            android:visibility="gone"
-            tools:text="34 reply" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvReactions"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/layoutDetails"
-            android:layout_alignParentStart="true"
-            android:layout_marginStart="3dp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="3dp"
             android:orientation="horizontal"
             android:paddingTop="4dp"
             android:visibility="gone"
             tools:itemCount="3"
             tools:listitem="@layout/item_reaction" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvReplayCount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/rvReactions"
+            android:layout_marginEnd="2dp"
+            android:layout_toStartOf="@+id/toReplayLine"
+            android:paddingTop="3dp"
+            android:textColor="@color/colorAccent"
+            android:textSize="@dimen/tinyTextSize"
+            android:visibility="gone"
+            tools:text="34 reply" />
 
     </RelativeLayout>
 </layout>
