--- a/app/src/main/res/layout/sceyt_item_channel.xml
+++ b/app/src/main/res/layout/sceyt_item_channel.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:bind="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -24,36 +23,17 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <View
-            android:id="@+id/onlineStatusBg"
-            themedBackgroundTintColor="@{R.color.sceyt_color_bg}"
+        <com.sceyt.chat.ui.presentation.customviews.SceytOnlineView
+            android:id="@+id/onlineStatus"
+            themeStrokeColorOnlineView="@{R.color.sceyt_color_bg}"
             android:layout_width="14dp"
             android:layout_height="14dp"
             android:layout_margin="1dp"
-            android:background="@drawable/sceyt_bg_circle"
-            android:backgroundTint="@color/sceyt_color_bg"
             app:layout_constraintBottom_toBottomOf="@id/avatar"
-            app:layout_constraintEnd_toEndOf="@id/avatar" />
-
-        <View
-            android:id="@+id/onlineStatus"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_margin="1.5dp"
-            android:background="@drawable/sceyt_bg_circle"
-            android:backgroundTint="@color/sceyt_color_green"
-            app:layout_constraintBottom_toBottomOf="@id/onlineStatusBg"
-            app:layout_constraintEnd_toEndOf="@id/onlineStatusBg"
-            app:layout_constraintStart_toStartOf="@+id/onlineStatusBg"
-            app:layout_constraintTop_toTopOf="@+id/onlineStatusBg" />
-
-        <androidx.constraintlayout.widget.Group
-            android:id="@+id/groupOnline"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="gone"
-            app:constraint_referenced_ids="onlineStatus,onlineStatusBg"
-            tools:visibility="visible" />
+            app:layout_constraintEnd_toEndOf="@id/avatar"
+            app:sceytOnlineViewIndicatorColor="@color/sceyt_color_green"
+            app:sceytOnlineViewStrokeColor="@color/sceyt_color_bg"
+            app:sceytOnlineViewStrokeWidth="1.5dp" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/channelTitle"
