--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_channel.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_channel.xml
@@ -66,6 +66,7 @@
             themedSpannableTextColor="@{true}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textAlignment="viewStart"
             android:layout_marginTop="4dp"
             android:layout_marginEnd="10dp"
             android:ellipsize="end"
