--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_channel_members.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_channel_members.xml
@@ -20,14 +20,16 @@
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/userName"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="12dp"
         android:fontFamily="@font/roboto_medium"
         android:lines="1"
         android:textColor="@color/sceyt_color_text_themed"
         android:textSize="@dimen/mediumTextSize"
+        app:layout_constrainedWidth="true"
         app:layout_constraintEnd_toStartOf="@+id/roleName"
+        app:layout_constraintHorizontal_bias="0"
         app:layout_constraintStart_toEndOf="@id/avatar"
         app:layout_constraintTop_toTopOf="@+id/avatar"
         tools:text="John" />
@@ -49,14 +51,14 @@
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/roleName"
         android:layout_width="wrap_content"
-        android:background="@drawable/sceyt_bg_corners_20"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/roboto_medium"
+        android:background="@drawable/sceyt_bg_corners_20"
         android:backgroundTint="#1A4F6AFF"
+        android:fontFamily="@font/roboto_medium"
         android:includeFontPadding="false"
         android:lines="1"
-        android:paddingVertical="3dp"
         android:paddingHorizontal="8dp"
+        android:paddingVertical="3dp"
         android:textColor="@color/sceyt_color_accent"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
