--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_channel_members.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_channel_members.xml
@@ -36,14 +36,16 @@
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvStatus"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
+        android:layout_marginHorizontal="12dp"
         android:lines="1"
         android:textColor="@color/sceyt_color_gray_800"
         android:textSize="13sp"
         app:layout_constraintBottom_toBottomOf="@id/avatar"
-        app:layout_constraintEnd_toEndOf="@+id/userName"
+        app:layout_constraintEnd_toStartOf="@+id/roleName"
+        app:layout_constraintHorizontal_bias="0"
+
         app:layout_constraintStart_toEndOf="@id/avatar"
         app:layout_constraintTop_toBottomOf="@+id/userName"
         tools:text="online" />
