--- a/SceytChatUiKit/src/main/res/layout/sceyt_message_reactions_recycler_view.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_message_reactions_recycler_view.xml
@@ -6,7 +6,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@drawable/sceyt_bg_corners_20"
-    android:backgroundTint="@color/sceyt_color_white"
+    android:backgroundTint="@color/sceyt_color_dialog_bg_themed"
     android:elevation="1dp"
     android:layoutDirection="ltr"
     android:orientation="horizontal"
