--- a/SceytChatUiKit/src/main/res/layout/sceyt_fragment_bottom_sheet_emojis.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_fragment_bottom_sheet_emojis.xml
@@ -8,7 +8,7 @@
         android:id="@+id/emojiView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="5dp"
+        android:paddingTop="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="1:.75"
         app:layout_constraintTop_toTopOf="parent" />
