--- a/SceytChatUiKit/src/main/res/layout/sceyt_message_input_view.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_message_input_view.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/sceyt_color_dialog_bg_themed">
 
     <View
         android:id="@+id/viewTop"
@@ -49,7 +50,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="1dp"
-        android:background="@color/sceyt_color_dialog_bg_themed"
         android:paddingVertical="12dp"
         app:layout_constraintTop_toBottomOf="@+id/layoutReplyOrEditMessage">
 
