--- a/SceytChatUiKit/src/main/res/layout/sceyt_record_view.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_record_view.xml
@@ -10,6 +10,7 @@
         android:id="@+id/recording"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/sceyt_color_dialog_bg_themed"
         android:layout_gravity="bottom"
         app:layout_constraintBottom_toBottomOf="parent">
 
