--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_out_image_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_out_image_message.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingHorizontal="10dp">
 
@@ -24,15 +24,13 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:background="@drawable/sceyt_bg_out_message"
-        android:maxWidth="@dimen/bodyMaxWidth"
-        android:minWidth="@dimen/bodyMaxWidth">
+        android:background="@drawable/sceyt_bg_out_message">
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvForwarded"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="12dp"
+            android:layout_marginHorizontal="8dp"
             android:layout_marginTop="7dp"
             android:drawableStart="@drawable/sceyt_ic_forward_14"
             android:drawablePadding="5dp"
@@ -43,6 +41,7 @@
             android:textColor="@color/sceyt_color_accent"
             android:textSize="@dimen/extraSmallTextSize"
             android:visibility="gone"
+            app:layout_constrainedWidth="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toStartOf="parent"
@@ -61,11 +60,12 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvForwarded"
+            app:layout_constraintWidth_max="@dimen/bodyMaxWidth"
             tools:visibility="visible" />
 
         <com.sceyt.sceytchatuikit.presentation.customviews.SceytClickableTextView
             android:id="@+id/messageBody"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="12dp"
             android:layout_marginTop="4dp"
@@ -74,41 +74,56 @@
             android:textSize="@dimen/mediumTextSize"
             android:visibility="gone"
             app:layout_constraintEnd_toEndOf="@+id/layoutDetails"
-            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toStartOf="@+id/layoutDetails"
             app:layout_constraintTop_toBottomOf="@+id/viewReply"
             app:layout_constraintWidth_max="@dimen/bodyMaxWidth"
             tools:text="Lore ipsum  is the correct text which"
             tools:visibility="visible" />
 
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="2dp"
-            android:orientation="vertical"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/fileImage"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_margin="2dp"
+            android:scaleType="centerCrop"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/messageBody"
-            tools:itemCount="1"
-            tools:listitem="@layout/sceyt_message_file_item" />
+            app:shapeAppearanceOverlay="@style/SceytShapeAppearanceOverlay.CornerSize18"
+            tools:layout_height="200dp"
+            tools:src="@tools:sample/backgrounds/scenic" />
+
+        <com.sceyt.sceytchatuikit.presentation.customviews.SceytCircularProgressView
+            android:id="@+id/loadProgress"
+            android:layout_width="@dimen/messageProgressSize"
+            android:layout_height="@dimen/messageProgressSize"
+            android:padding="3dp"
+            app:backgroundColor="@color/sceyt_progress_bg_color"
+            app:iconSizeInPercent="70"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/fileImage"
+            app:minProgress="2"
+            app:progressColor="@color/sceyt_color_white"
+            app:trackColor="@android:color/transparent" />
 
         <com.sceyt.sceytchatuikit.presentation.customviews.SceytDateStatusView
             android:id="@+id/messageDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="5dp"
-            android:layout_marginBottom="5dp"
+            android:layout_marginEnd="7dp"
+            android:layout_marginBottom="7dp"
             android:paddingHorizontal="5dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:sceytDateStatusViewHighlighted="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:sceytDateStatusViewDateTextColor="@color/sceyt_color_gray_400"
             app:sceytDateStatusViewDateTextSize="@dimen/tinyTextSize"
             app:sceytDateStatusViewFirstStatus="false"
+            app:sceytDateStatusViewHighlighted="true"
             app:sceytDateStatusViewStatusIconMargin="5dp"
             app:sceytDateStatusViewStatusIconSize="15.5dp"
             tools:sceytDateStatusViewDateText="00:37"
