--- a/SceytChatUiKit/src/main/res/values/sceyt_attrs.xml
+++ b/SceytChatUiKit/src/main/res/values/sceyt_attrs.xml
@@ -77,6 +77,7 @@
         <attr name="rotateAnimEnabled" format="boolean"/>
         <attr name="backgroundColor" format="color"/>
         <attr name="iconSizeInPercent" format="float"/>
+        <attr name="enableProgressDownAnimation" format="boolean"/>
 
     </declare-styleable>
 
