--- a/SceytChatUiKit/src/main/res/layout/sceyt_activity_share.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_activity_share.xml
@@ -20,6 +20,7 @@
         android:layout_height="0dp"
         android:clipToPadding="false"
         android:paddingVertical="10dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toTopOf="@+id/messageInput"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
         app:layout_constraintVertical_chainStyle="packed"
