--- a/SceytChatUiKit/src/main/res/layout/sceyt_fragment_info_description.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_fragment_info_description.xml
@@ -51,7 +51,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <Space
-        android:id="@+id/space"
+        android:id="@+id/divider"
         android:layout_width="match_parent"
         android:layout_height="16dp"
         app:layout_constraintTop_toBottomOf="@+id/layoutDetails" />
