--- a/SceytChatUiKit/src/main/res/layout/sceyt_fragment_info_details.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_fragment_info_details.xml
@@ -66,7 +66,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <Space
-        android:id="@+id/space"
+        android:id="@+id/divider"
         android:layout_width="match_parent"
         android:layout_height="16dp"
         android:background="@color/sceyt_color_divider"
