--- a/examples/SceytDemoApp/src/main/res/layout/activity_login.xml
+++ b/examples/SceytDemoApp/src/main/res/layout/activity_login.xml
@@ -53,6 +53,7 @@
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/userNameTextField"
+                    style="@style/My.TextInputLayout.FilledBox.Padding"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="35dp"
@@ -61,12 +62,14 @@
                     android:textColorHint="@color/sceyt_color_hint"
                     app:boxBackgroundColor="@android:color/transparent"
                     app:boxCollapsedPaddingTop="5dp"
+                    app:boxStrokeColor="@color/sceyt_color_accent"
                     app:endIconMode="custom"
                     app:endIconTint="@color/sceyt_color_accent"
-                    style="@style/My.TextInputLayout.FilledBox.Padding"
                     app:errorEnabled="true"
+                    app:hintTextColor="@color/sceyt_color_accent"
                     app:layout_constraintTop_toBottomOf="@id/subTitle"
-                    app:placeholderText="@string/enter_username">
+                    app:placeholderText="@string/enter_username"
+                    app:placeholderTextColor="@color/sceyt_color_hint">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/userNameInput"
@@ -83,6 +86,7 @@
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/displayNameTextField"
+                    style="@style/My.TextInputLayout.FilledBox.Padding"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@android:color/transparent"
@@ -92,12 +96,14 @@
                     android:textColorHint="@color/sceyt_color_hint"
                     app:boxBackgroundColor="@android:color/transparent"
                     app:boxCollapsedPaddingTop="5dp"
+                    app:boxStrokeColor="@color/sceyt_color_accent"
                     app:endIconMode="custom"
                     app:endIconTint="@color/sceyt_color_accent"
                     app:errorEnabled="true"
-                    style="@style/My.TextInputLayout.FilledBox.Padding"
+                    app:hintTextColor="@color/sceyt_color_accent"
                     app:layout_constraintTop_toBottomOf="@id/userNameTextField"
-                    app:placeholderText="@string/enter_display_name">
+                    app:placeholderText="@string/enter_display_name"
+                    app:placeholderTextColor="@color/sceyt_color_hint">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/displayNameInput"
@@ -109,7 +115,7 @@
                         android:paddingStart="0dp"
                         android:paddingEnd="0dp"
                         android:singleLine="true"
-                        android:textColor="@color/sceyt_color_text_themed" />
+                        android:textColor="@color/black" />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
