--- a/SceytChatUiKit/src/main/res/layout/scroll_to_bottom_view.xml
+++ b/SceytChatUiKit/src/main/res/layout/scroll_to_bottom_view.xml
@@ -9,6 +9,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
+        android:background="@drawable/sceyt_bg_circle"
+        android:backgroundTint="@color/sceyt_color_primary"
         android:elevation="2dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
