--- a/SceytChatUiKit/src/main/res/layout/sceyt_fragment_info_members_by_role.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_fragment_info_members_by_role.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.sceyt.sceytchatuikit.presentation.uicomponents.conversationinfo.membersbyrolebuttons.InfoMembersByRoleButtonsFragment">
 
     <androidx.appcompat.widget.AppCompatTextView
@@ -81,9 +81,15 @@
         app:layout_constraintTop_toBottomOf="@+id/searchMessages" />
 
     <androidx.constraintlayout.widget.Group
+        android:id="@+id/group_channel_members"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:constraint_referenced_ids="dividerBetweenMembersAndAdmins,members" />
+
+    <androidx.constraintlayout.widget.Group
         android:id="@+id/group_channel_admins"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:constraint_referenced_ids="dividerBetweenMembersAndAdmins,admins" />
+        app:constraint_referenced_ids="divider2,admins" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
