--- a/SceytChatUiKit/src/main/res/layout/sceyt_layout_input_search_result.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_layout_input_search_result.xml
@@ -12,6 +12,8 @@
         android:layout_marginStart="16dp"
         android:background="?selectableItemBackgroundBorderless"
         android:padding="5dp"
+        android:scaleX="1.2"
+        android:scaleY="1.2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -22,6 +24,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
+        android:scaleX="1.2"
+        android:scaleY="1.2"
         android:background="?selectableItemBackgroundBorderless"
         android:padding="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
