--- a/SceytChatUiKit/src/main/res/layout/sceyt_dialog_group_channel_actions.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_dialog_group_channel_actions.xml
@@ -21,10 +21,8 @@
         android:text="@string/sceyt_pin_chat"
         android:textColor="@color/sceyt_color_text_themed"
         android:textSize="@dimen/_12ssp"
-        android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView3"
-        tools:visibility="visible" />
+        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView3" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/unPin"
