--- a/SceytChatUiKit/src/main/res/layout/sceyt_fragment_channel_links.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_fragment_channel_links.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/sceyt_color_background"
     android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
