--- a/SceytChatUiKit/src/main/res/layout/sceyt_fragment_info_details.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_fragment_info_details.xml
@@ -38,6 +38,7 @@
             android:fontFamily="@font/roboto_medium"
             android:maxLines="2"
             android:textColor="@color/sceyt_color_text_primary"
+            android:textIsSelectable="true"
             android:textSize="16sp"
             app:layout_constrainedWidth="true"
             app:layout_constraintBottom_toTopOf="@+id/tvSubtitle"
