--- a/SceytChatUiKit/src/main/res/values/colors.xml
+++ b/SceytChatUiKit/src/main/res/values/colors.xml
@@ -37,7 +37,7 @@
 
     <color name="sceyt_color_bg_out_message">#E3E7FF</color>
     <color name="sceyt_color_bg_inc_message">#F1F2F6</color>
-    <color name="sceyt_color_bg_out_link_preview">#C9D1FF</color>
+    <color name="sceyt_color_bg_out_link_preview">#D1D8FF</color>
     <color name="sceyt_color_bg_inc_link_preview">#E4E6EE</color>
 
 
