--- a/SceytChatUiKit/src/main/res/layout/sceyt_fragment_channels.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_fragment_channels.xml
@@ -40,6 +40,7 @@
         app:layout_constraintTop_toBottomOf="@+id/underline">
 
         <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/searchAppBarLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/sceyt_color_background"
@@ -50,7 +51,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingHorizontal="10dp"
-                android:paddingTop="15dp"
+                android:paddingTop="10dp"
                 android:paddingBottom="8dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_scrollFlags="scroll|enterAlways|snap" />
